--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.42")
     kapt("com.google.dagger:hilt-android-compiler:2.42")
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
+    // Accompanist Navigation Animation
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.22.0-rc"
 }
 
 // Allow references to generated code
